--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,7 +16,7 @@ body {
     height: 100vh;
     //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
     // background: #D3D3D3;
-    background-image: url("../public/image/Solar.jpg");
+    background-image: url("../public/image/bg-white.jpg");
     position: fixed;
     left: 0;
     top: 0;
